// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenComments should display a group of comment elements showing the appropriate text from the testData object 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "RGB(256,256,256)",
      "borderBottom": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "column",
      "height": "auto",
      "justifyContent": "space-around",
      "maxWidth": "100%",
      "width": "auto",
    }
  }
>
  <p
    style={
      Object {
        "alignSelf": "center",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "fontSize": "1.3em",
        "fontWeight": "bold",
      }
    }
  >
    User Comments
  </p>
  <div
    style={
      Object {
        "background": "RGBA(256,256,256,1)",
        "border": "outset",
        "display": "flex",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "flexDirection": "column",
        "height": "auto",
        "justifyContent": "center",
        "margin": "2%",
        "maxWidth": "96%",
        "minWidth": "96%",
        "width": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": "1%",
          "marginRight": "1%",
        }
      }
    >
      <p
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "fontWeight": "bold",
            "maxWidth": "90%",
            "width": "auto",
            "wordWrap": "normal",
          }
        }
      >
        TestUser
      </p>
      <p>
        2018-01-01
      </p>
    </div>
    <div
      style={
        Object {
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "marginLeft": "2%",
          "marginRight": "2%",
          "width": "auto",
        }
      }
    >
      <p
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "maxWidth": "100%",
            "width": "auto",
            "wordWrap": "normal",
          }
        }
      >
        Some Comment String
      </p>
    </div>
  </div>
  <div
    style={
      Object {
        "background": "RGBA(256,256,256,1)",
        "border": "outset",
        "display": "flex",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "flexDirection": "column",
        "height": "auto",
        "justifyContent": "center",
        "margin": "2%",
        "maxWidth": "96%",
        "minWidth": "96%",
        "width": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": "1%",
          "marginRight": "1%",
        }
      }
    >
      <p
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "fontWeight": "bold",
            "maxWidth": "90%",
            "width": "auto",
            "wordWrap": "normal",
          }
        }
      >
        TestUser2
      </p>
      <p>
        2018-01-02
      </p>
    </div>
    <div
      style={
        Object {
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "marginLeft": "2%",
          "marginRight": "2%",
          "width": "auto",
        }
      }
    >
      <p
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "maxWidth": "100%",
            "width": "auto",
            "wordWrap": "normal",
          }
        }
      >
        Some Comment String 2
      </p>
    </div>
  </div>
</div>
`;

exports[`FullScreenComments should show comment object with a string "No comments yet, be the first to comment on this Great Image!", empty comments array 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "RGB(256,256,256)",
      "borderBottom": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "column",
      "height": "auto",
      "justifyContent": "space-around",
      "maxWidth": "100%",
      "width": "auto",
    }
  }
>
  <p
    style={
      Object {
        "alignSelf": "center",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "fontSize": "1.3em",
        "fontWeight": "bold",
      }
    }
  >
    User Comments
  </p>
  <p
    style={
      Object {
        "alignSelf": "center",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "margin": "3%",
      }
    }
  >
    No comments yet, be the first to comment on this Great Image!
  </p>
</div>
`;

exports[`FullScreenComments should show comment object with a string "No comments yet, be the first to comment on this Great Image!", no comments key. 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "RGB(256,256,256)",
      "borderBottom": "inset",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "column",
      "height": "auto",
      "justifyContent": "space-around",
      "maxWidth": "100%",
      "width": "auto",
    }
  }
>
  <p
    style={
      Object {
        "alignSelf": "center",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "fontSize": "1.3em",
        "fontWeight": "bold",
      }
    }
  >
    User Comments
  </p>
  <p
    style={
      Object {
        "alignSelf": "center",
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "margin": "3%",
      }
    }
  >
    No comments yet, be the first to comment on this Great Image!
  </p>
</div>
`;
